syntax = "proto3";

import "common.proto";
import "game.proto";
import "user.proto";

package api.rohan;

option java_package = "ch.chaosconnect.api.rohan";
option java_multiple_files = true;

message GameUpdateResponse {
    api.game.GameUpdateEvent event = 1;
    api.game.GameState new_state = 2;
}

service GameService {
  rpc PlacePiece(api.game.Coordinate) returns (api.common.Empty);

  rpc GetGameUpdates(api.common.Empty)
      returns (stream GameUpdateResponse);
}

service UserService {
  rpc GetUser(api.user.GetUserRequest) returns (api.user.UserAuthResponse);
  rpc AddUser(api.user.AddUserRequest) returns (api.user.UserAuthResponse);
  rpc AddTemporaryUser(api.user.AddTemporaryUserRequest) returns (api.user.UserAuthResponse);
  rpc UpdateUser(api.user.UpdateUserRequest) returns (api.user.UserAuthResponse);
}